# generative_data_prep

./: .bazelrc  .gitignore  .pre-commit-config.yaml  BUILD.bazel  CONTRIBUTING.md  MANIFEST.in  MODULE.bazel  Pipfile  README.md  advanced_usage.md  build.sh  format.sh  gazelle_python.yaml  main.css  pyproject.toml  requirements.txt  setup.cfg  test.sh
.circleci/: VERSIONS  config.yml  generate_requirements.sh
.circleci/assets/: .safety-policy.yml
.circleci/assets/python/: .safety-policy.yml
.circleci/pip-compile-scripts/: generate_requirements.py  generate_requirements.sh
.github/: CODEOWNERS  CONTRIBUTING.rst  pull_request_template.md
.github/workflows/: stale.yml
configs/: logger.conf
docs/source/: conf.py  generate_autosummary.rst  index.rst
examples/: decode_hdf5.py
examples/dialogue/pipeline_dialogue/hdf5/: train_10_of_32.hdf5  train_12_of_32.hdf5  train_15_of_32.hdf5  train_21_of_32.hdf5  train_24_of_32.hdf5  train_30_of_32.hdf5  train_3_of_32.hdf5  train_4_of_32.hdf5  train_7_of_32.hdf5
examples/dialogue/pipeline_dialogue/splits/: train_10_of_32.jsonl  train_17_of_32.jsonl  train_19_of_32.jsonl  train_22_of_32.jsonl  train_24_of_32.jsonl  train_2_of_32.jsonl  train_31_of_32.jsonl  train_3_of_32.jsonl  train_4_of_32.jsonl  train_5_of_32.jsonl  train_6_of_32.jsonl  train_8_of_32.jsonl
examples/generative_tuning/pipeline_generative_tuning/hdf5/: train_11_of_32.hdf5  train_13_of_32.hdf5  train_15_of_32.hdf5  train_17_of_32.hdf5  train_1_of_32.hdf5  train_22_of_32.hdf5  train_23_of_32.hdf5  train_24_of_32.hdf5  train_26_of_32.hdf5  train_29_of_32.hdf5  train_2_of_32.hdf5  train_30_of_32.hdf5  train_31_of_32.hdf5  train_32_of_32.hdf5  train_4_of_32.hdf5  train_6_of_32.hdf5  train_7_of_32.hdf5  train_8_of_32.hdf5  train_9_of_32.hdf5
examples/generative_tuning/pipeline_generative_tuning/splits/: train_12_of_32.jsonl  train_14_of_32.jsonl  train_18_of_32.jsonl  train_22_of_32.jsonl  train_24_of_32.jsonl  train_25_of_32.jsonl  train_26_of_32.jsonl  train_28_of_32.jsonl  train_29_of_32.jsonl  train_2_of_32.jsonl  train_30_of_32.jsonl  train_5_of_32.jsonl  train_8_of_32.jsonl  train_9_of_32.jsonl
examples/metaICL/: decoded_data_prep_metaICL.txt
examples/metaICL/pipeline_metaICL/hdf5/: train_14_of_32.hdf5  train_15_of_32.hdf5  train_16_of_32.hdf5  train_17_of_32.hdf5  train_1_of_32.hdf5  train_21_of_32.hdf5  train_22_of_32.hdf5  train_23_of_32.hdf5  train_24_of_32.hdf5  train_27_of_32.hdf5  train_29_of_32.hdf5  train_30_of_32.hdf5  train_32_of_32.hdf5  train_3_of_32.hdf5  train_4_of_32.hdf5  train_5_of_32.hdf5  train_6_of_32.hdf5
examples/metaICL/pipeline_metaICL/splits/: train_10_of_32.jsonl  train_11_of_32.jsonl  train_13_of_32.jsonl  train_14_of_32.jsonl  train_15_of_32.jsonl  train_16_of_32.jsonl  train_17_of_32.jsonl  train_19_of_32.jsonl  train_21_of_32.jsonl  train_23_of_32.jsonl  train_24_of_32.jsonl  train_27_of_32.jsonl  train_28_of_32.jsonl  (+8 more)
generative_data_prep/: __init__.py  __main__.py
generative_data_prep/configs/: __init__.py
generative_data_prep/data_buffers/: __init__.py  data_buffer.py  file_buffer.py  hdf5_data_buffer.py  hdf5_file_buffer.py  text_buffer.py
generative_data_prep/data_prep/: __init__.py  data_prep.py  pipeline.py
generative_data_prep/processors/: __init__.py  article_tokenizer.py  metrics.py  sequence_packer.py
generative_data_prep/tokenized_line/: __init__.py  token.py  tokenized_line.py
generative_data_prep/utils/: __init__.py  add_metadata_to_dataset.py  add_sequence_metadata_to_dataset.py  arg_configs.py  arg_parser.py  balance_hdf5_files.py  constants.py  convert_chat_template_to_prompt_completion.py  decode_hdf5.py  large_file_shuffle.py  logger.py  logger_config.ini  logger_config.yaml  metadata_generation.py  path_verify.py  studio_integrations.py  utils.py
requirements/: BUILD.bazel  all-requirements.txt  build-requirements.txt  dev-requirements.txt  docs-requirements.txt  requirements-build.txt  requirements-dev.txt  requirements-docs.txt  requirements-tests.txt  requirements.txt  requirements_build.txt  requirements_dev.txt  requirements_docs.txt  requirements_tests.txt  tests-requirements.txt
tests/: conftest.py  test_add_sequence_metadata_to_dataset.py  test_arg_configs.py  test_article_tokenizer.py  test_e2e.py  test_hdf5_file_buffer.py  test_metadata.py  test_multiprocessing.py  test_sequence_packer.py  test_sha256.py  test_split.py  test_studio_integrations.py  test_token.py  test_tokenized_line.py  test_tokenizer.py  test_utils.py
tests/component/: test_running_command.py
tests/e2e_test_files/input/: data_prep_ex.jsonl  pipeline_ex_data.jsonl
tests/examples/apply_chat_template/: data_prepped_apply_chat_template.hdf5  decoded_data_prepped_apply_chat_template.txt
tests/examples/category_ids/: data_prepped_category_ids.hdf5  example_category_ids_data.jsonl
tests/examples/data_prep_from_main/: example_data_prep_from_main_data.jsonl
tests/examples/data_prep_test/: data_prepped_data_prep_test.hdf5
tests/examples/dialogue/: data_prepped_dialogue.hdf5  data_prepped_dialogue_chat_template.hdf5  decoded_data_prepped_dialogue.txt  decoded_data_prepped_dialogue_chat_template.txt  example_dialogue_data.jsonl
tests/examples/generative_tuning/: data_prepped_generative_tuning.hdf5  decoded_data_prepped_generative_tuning.txt  example_generative_tuning_data.jsonl
tests/examples/json_load_error_test/: example_json_load_error_test_data.jsonl
tests/examples/metaICL/: data_prepped_metaICL.hdf5  decoded_data_prepped_metaICL.txt  example_metaICL_data.jsonl
tests/examples/no_split_dir/: decoded_data_prepped_no_split_dir.txt
tests/examples/pretraining/: data_prepped_pretraining.hdf5  decoded_data_prepped_pretraining.txt  example_pretraining_data.txt
tests/examples/pretraining_split_with_new_metadata_and_sha256/: files_metadata.json  metadata.yaml
tests/examples/pretraining_txt/: data_prepped_pretraining_txt.hdf5  decoded_data_prepped_pretraining_txt.txt
tests/gpt2_tokenizer/: config.json  tokenizer_config.json
tests/unit/configs/: test_logger.py
tests/unit/utils/: test_utils.py
(+1025 files in other folders)
