[build-system]
requires = ["setuptools", "setuptools-scm[toml]"]
build-backend = "setuptools.build_meta"

[project]
# Use "sambanova_" prefix in the package name i.e. the root folder for the source-code
name = "sambanova_generative_data_prep"
description = "Prepare data that can be used to train generative models."
readme = "README.md"
requires-python = ">=3.7"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "h5py",
    "jsonlines",
    "numpy",
    "psutil",
    "torch",
    "tqdm",
    "transformers",
]
dynamic = ["version"]

[project.optional-dependencies]
build = [
    "build",
    "setuptools_scm",
    "twine",
]
dev = [
    "build",
    "ipdb",
    "twine",
    "setuptools-scm"
    ]
docs = [
    "ipython",
    "nbsphinx",
    "myst-parser",
    "setuptools_scm",
    "sphinx >= 5.2.3",
    "sphinx-autodoc-typehints",
    "pydantic-settings",
]
tests = [
    "pip == 23.1.2",
    "pip-tools == 6.13.0",
    "pre-commit >= 2.20",
    "pytest >= 7.1",
    "pytest-html",
    "pytest-cov",
    "sphinx >= 5.2.3",
    "sphinx_rtd_theme"
    ]

[tool.setuptools.packages.find]
where = ["generative_data_prep"]

# Enable setuptools_scm for automated versioning
[tool.setuptools_scm]

# Configure Pytest for testing Python code
[tool.pytest.ini_options]
pythonpath = [
    "."
]
minversion = "7.0"
markers = [
    "fast",
    "slow",
]
filterwarnings = [
    "error",
    # TODO: Fix the Warning and remove this ignore line
    "ignore:unclosed file.*io.TextIOWrapper.*:ResourceWarning",
]
addopts = """
-ra -q -vv
--doctest-modules
--durations=50
--html=test_reports/report.html
--junitxml=test_reports/circleci/pytest/junit.xml
--cov=generative_data_prep
--cov-branch
--cov-report term
--cov-report html:test_reports/coverage/pytest_cov.html
--cov-report xml:test_reports/coverage/pytest_cov.xml
"""
testpaths = [
    "tests",
]
junit_suite_name = "Pytest"
junit_duration_report = "call"

# Configure isort for sorting imports automatically
[tool.isort]
profile = "black"
known_first_party = ["sambanova_*"]

[tool.bandit]
exclude_dirs = [
    "tests",
]

# Configure mypy for type-checking in Python code
[tool.mypy]
warn_return_any = true
warn_unused_configs = true
exclude = [
    "tests",
    "docs",
]
# Need this otherwise mypy complains it can't interpret the types of objects
# from 3rd party libraries like transformers
ignore_missing_imports = true

# Configure black
[tool.black]
line-length = 120
